# gas-balance-risk

./: .env.docker.example  .env.example  .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: mongo.py
models/features/: build_model_frame.py  build_training_frame.py  derive_forecast_inputs.py  standardize.py
models/stress/: forecast_stress_event.py  stress_event_model.py  vol_risk_model.py
models/volatility/: forecast_vol_risk.py  vol_risk_model.py
notebooks/: stress_model_validation.ipynb  vol_risk_model_validation.ipynb
scheduler/: crontab  run.sh
scrapy/: scrapy.cfg
scrapy/gas_ebb/: items.py  pipelines.py  settings.py
scrapy/gas_ebb/data/algonquin_capacity/: 2026-01-02T20-28-32+00-00.json
scrapy/gas_ebb/spiders/: algonquin_capacity.py  algonquin_notices.py
scripts/eia/: fetch_henry_hub_spot_prices.py  fetch_working_gas_storage_weekly.py
scripts/noaa/: download_and_aggregate_ghcnd.py  pipeline_airport_ghcnd_mapping.csv
supervisor/: supervisord.conf
